# HOARE-AGENT

./: .gitignore  README.md  docker-compose.yml  verify.ts
action/: README.md  action.yml  verify_runner.py
app/billing/subscribe/: page.tsx
backend/: Dockerfile  main.py  requirements.txt
backend/grpc_server/: __init__.py  server.py
backend/hoare_engine/: __init__.py  agent.py  pda_engine.py  verifier.py
backend/integrations/: __init__.py  connectors.py
backend/saas/: __init__.py  audit.py  auth.py  billing.py  usage.py
backend/schema/: __init__.py  models.py
backend/tests/: test_pipeline.py
deploy/cloud-workers/: cloudrun-service.yaml
docs/: enterprise-playbooks.md  week4-integration-guide.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  store.js
frontend/src/components/: NodeMap.jsx  StatePanel.jsx  TechFusionGrid.jsx
proto/: hoare_agent.proto
scripts/: bootstrap.ps1
sdk/node/: README.md  index.d.ts  index.js  package.json
sdk/node/test/: test.js
sdk/nodejs/: README.md  index.d.ts  index.js  index.mjs  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/hoare_agent/: __init__.py  _models.py  _parser.py  _verifier.py  cli.py
sdk/python/hoareagent/: __init__.py  _core.py  cli.py
sdk/python/tests/: test_sdk.py
