[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoare-agent"
version = "0.1.0"
description = "Python SDK and CLI for the Hoare-Agent formally-verified code pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.13,<5.0",
    "pydantic>=2.7,<3.0",
]

[project.scripts]
hoare-agent = "hoare_agent.cli:main"

[project.optional-dependencies]
http = ["aiohttp>=3.9,<4.0"]
dev  = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hoare_agent*"]
